--- a/publising_guide/html/menu_03.html
+++ b/publising_guide/html/menu_03.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/style.css">
+   
 
     <!-- js -->
     <script src="../js/jquery-3.6.0.js"></script>
@@ -312,6 +313,85 @@
                                     </div>
                                 </dd>
                             </dl>
+                        </div>
+                        <div class="dl_list_group">
+                            <dl>
+                                <dt id="menu_03_03_01_01">사용자 지정속성(변수)</dt>
+                                <dd>
+                                    <pre class="brush: css;">
+                                        @charset "utf-8";
+                                        /* ============================================================
+                                            파일정의 : reset.css
+                                            지정 속성 적용 예제
+                                        ============================================================ */
+                                        /* reset.css */
+                                        
+                                        :root {
+                                            /* color */
+                                            --main-color: brown;
+                                            --sub-color: brown;
+                                            --main-bg-color: brown;
+                                            --sub-bg-color: brown;
+
+                                            /* font size */
+                                            --font-xs: 1.2rem;
+                                            --font-s: 1.4rem;
+                                            --font-m: 1rem;
+                                            --font-l: 2rem;
+                                            --font-xl: 2.4rem;
+                                          }
+                                        
+                                        /* style.css */
+                                        element {
+                                            /* color */    
+                                            background-color: var(--main-color);
+                                            background-color: var(--main-bg-color);
+                                            /* font size */
+                                            font-size: var(--font-xs);
+                                            font-size: var(--font-s);
+                                        }
+
+                                    </pre>
+                                </dd>
+                                <dd>
+                                    <div class="ul_list_group">
+                                        <ul>
+                                            <li>- 사용자 지정 속성은 전용 표기법을 사용해 정의하고 var() 함수를 사용해 접근할 수 있다. </li>
+                                            <li>- 사용자 지정 속성은 두 개의 붙임표로 시작하는 속성의 이름과 함께 유효한 값이라면 그 값으로 지정해 사용한다. </li>
+                                            <li>- 사용자 지정 속성은 종속 대상이며 부모로부터 상속된다. </li>
+                                            <li>- 참고: 사용자 지정 속성의 이름은 대소문자를 구분한다. --my-color와 --My-color는 서로 다른 속성으로써 처리한다. </li>
+                                            <li>- 주의: ie에서 지원되지 않으므로 첨부된 root.js 파일을 다운받아 대응한다.</li>
+                                        </ul>
+                                    </div>
+                                </dd>
+                            </dl>
+                            <div class="dl_list_group">
+                                <dl>
+                                    <dt id="menu_03_05_01">root.js 파일 다운로드</dt>
+                                    <dd>
+                                        <div class="tbl_group row">
+                                            <table>
+                                                <caption>root.js 파일 다운로드 테이블</caption>
+                                                <colgroup>
+                                                    <col width="35%"/>
+                                                    <col width="65%"/>
+                                                </colgroup>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">root.js 파일 다운로드</th>
+                                                        <td>
+                                                            <div class="txtdown_group">
+                                                                <a href="../download/root.js" target="_blank" title="파일 다운로드" download>../root.js</a>
+                                                                <input type="text">
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </dd>
+                                </dl>
+                            </div>
                         </div>
 
                         <div class="dl_list_group">
@@ -814,6 +894,7 @@
                             <a href="#menu_03_03">css 코드 작성규칙</a>
                             <ul>
                                 <li><a href="#menu_03_03_01">기본규칙</a></li>
+                                <li><a href="#menu_03_03_01_01">사용자 지정속성(변수)</a></li>
                                 <li><a href="#menu_03_03_02">들여쓰기/줄바꿈</a></li>
                                 <li><a href="#menu_03_03_03">주석</a></li>
                                 <li><a href="#menu_03_03_04">속성 선언 순서</a></li>
