font-size xxl 추가

--- a/publising_guide/html/menu_03.html
+++ b/publising_guide/html/menu_03.html
@@ -339,6 +339,7 @@
                                             --font-m: 1.6rem;
                                             --font-l: 2rem;
                                             --font-xl: 2.4rem;
+                                            --font-xxl: 2.6rem;
                                           }
                                         
                                         /* style.css */
