--- a/publising_guide/html/menu_03.html
+++ b/publising_guide/html/menu_03.html
@@ -851,7 +851,7 @@
                                             이미지 삽입의 예제
                                         ============================================================ */
                                         /* <img> 태그로 사용 */
-                                        <img src=" 이미지 링크 " al="대체 텍스트">
+                                        <img src=" 이미지 링크 " alt="대체 텍스트">
 
                                         /* &#123background-image : url()&#125 사용 */
                                          {
