js 라이브러리 내용 추가

--- a/publising_guide/html/menu_06.html
+++ b/publising_guide/html/menu_06.html
@@ -68,9 +68,103 @@
 
             <div class="main_in">
 
-                <div class="left"></div>
+                <div class="left">
 
-                <div class="right"></div>
+                    <div class="tit_group">
+                        <h3 id="menu_06_01">js 라이브러리</h3>
+                    </div>
+                    <div class="tbl_group row">
+                        <table>
+                            <caption>js 라이브러리</caption>
+                            <colgroup>
+                                <col width="30%"/>
+                                <col width="30%"/>
+                                <col width="40%"/>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">jquery-3.6.0</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/jquery-3.6.0.js" target="_blank" title="파일 다운로드" download="">../jquery-3.6.0.js</a>
+                                        </div>
+                                    </td>
+                                    <td>가장 최신 버전, ajax를 지원</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">jquery-3.6.0.min</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/jquery-3.6.0.min.js" target="_blank" title="파일 다운로드" download="">../jquery-3.6.0.min.js</a>
+                                        </div>
+                                    </td>
+                                    <td>제이쿼리 min파일 버전</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">jquery-ui</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/jquery-ui.js" target="_blank" title="파일 다운로드" download="">../jquery-ui.js</a>
+                                        </div>
+                                    </td>
+                                    <td>제이쿼리 ui</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">jquery-ui.min</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/jquery-ui.min.js" target="_blank" title="파일 다운로드" download="">../jquery-ui.min.js</a>
+                                        </div>
+                                    </td>
+                                    <td>제이쿼리 ui min파일 버전</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">swiper</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/swiper-bundle.min.js" target="_blank" title="파일 다운로드" download="">../swiper-bundle.min.js</a>
+                                        </div>
+                                    </td>
+                                    <td>swiper js</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">swiper 4.5</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/swiper.4.5.js" target="_blank" title="파일 다운로드" download="">../swiper.4.5.js</a>
+                                        </div>
+                                    </td>
+                                    <td>ie 호환 스와이퍼 버전 js</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">root</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/root.js" target="_blank" title="파일 다운로드" download="">../root.js</a>
+                                        </div>
+                                    </td>
+                                    <td>CSS :root를 ie에서도 지원</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">ztree</th>
+                                    <td>
+                                        <div class="txtdown_group">
+                                            <a href="../download/jquery.ztree.all.js" target="_blank" title="파일 다운로드" download="">../jquery.ztree.all.js</a>
+                                        </div>
+                                    </td>
+                                    <td>ztree 트리메뉴 플러그인</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+
+                <div class="right">
+                    <ul>
+                        <li><a href="#menu_06_01">js 라이브러리</a></li>
+                    </ul>
+                </div>
 
             </div>
 
