--- a/publising_guide/html/menu_05.html
+++ b/publising_guide/html/menu_05.html
@@ -68,9 +68,48 @@
 
             <div class="main_in">
 
-                <div class="left"></div>
+                <div class="left">
+                    <div class="tit_group">
+                        <h3 id="menu_05_01">기본 admin 레이아웃</h3>
+                    </div>
+                    <div class="dl_list_group">
+                        <dl>
+                            <dt id="menu_05_01_01"></dt>
+                            <dd>
+                            <div class="tbl_group column">
+                               <table>
+                                   <caption>기본 admin 레이아웃</caption>
+                                   <colgroup>
+                                    <col width="20%">
+                                    <col width="40%">
+                                    <col width="40%">
+                                    </colgroup>
+                                    <thead>
+                                        <tr>
+                                            <th>파일명</th>
+                                            <th>다운로드</th>
+                                            <th>설명</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th>admin_folder</th>
+                                            <td>
+                                                <div class="txtdown_group">
+                                                    <a href="../download/admin_folder.zip" target="_blank" title="파일 다운로드" download>../download/admin_folder.zip</a>
+                                                </div>
+                                            </td>
+                                            <td>기본 admin 레이아웃 zip파일 다운로드</td>
+                                        </tr>
+                                    </tbody>
+                               </table>
+                            </div>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
 
-                <div class="right"></div>
+                <!-- <div class="right">side menu</div> -->
 
             </div>
 
