폰트스타일 리소스 관련 설명 링크 추가

--- a/publising_guide/html/menu_03.html
+++ b/publising_guide/html/menu_03.html
@@ -642,6 +642,20 @@
                             </dl>
                         </div>
 
+                        <div class="dl_list_group">
+                            <dl>
+                                <dt id="menu_03_04_01">폰트 리소스</dt>
+                                <dd>
+                                    <div class="ul_list_group">
+                                        <ul>
+                                            <li>- 네트워크 리소스 용량을 차지하는 폰트 리소스용량 줄이는법</li>
+                                            <li>- <a href="https://d2.naver.com/helloworld/4969726">https://d2.naver.com/helloworld/4969726</a></li>
+                                        </ul>
+                                    </div>
+                                </dd>
+                            </dl>
+                        </div>
+
                     </div>
 
                     <div class="content_group">
